added slides from recent lectures

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -1277,6 +1277,7 @@
 \newcommand{\Tabc}{\mathtt{c}}
 \newcommand{\TabD}{\mathtt{D}}
 \newcommand{\TabE}{\mathtt{E}}
+\newcommand{\TabH}{\mathtt{H}}
 \newcommand{\TabYtoX}{\mathtt{YtoX}}
 \newcommand{\TabX}{\mathtt{X}}
 \newcommand{\TabY}{\mathtt{Y}}
@@ -2178,7 +2179,27 @@
 \newcommand{\specialcell}[2][c]{%
   \begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
 
+\newcommand{\OWF}{\textnormal{OWF}}
 
+\newcommand{\SPR}{\textnormal{SPR}}
+\newcommand{\AdvSPR}[2]{\Adv^{\mathrm{spr}}_{#1}(#2)}
+
+\newcommand{\PWR}{\textnormal{PWR}}
+\newcommand{\AdvPWR}[2]{\Adv^{\mathrm{pwr}}_{#1}(#2)}
+\newcommand{\pw}{pw}
+\newcommand{\salt}{sa}
+
+\newcommand{\Hinfty}{H^{\infty}}
+\newcommand{\Hshan}{H}
+
+\newcommand{\simoracle}{\textsf{Sim}}
+\newcommand{\foracle}{\textsf{f}}
+\newcommand{\INDIFF}{\textnormal{Indiff}}
+\newcommand{\AdvINDIFF}[2]{\Adv^{\mathrm{indiff}}_{#1}(#2)}
+
+
+\newcommand{\RKAPRF}{\textnormal{RKA-PRF}}
+\newcommand{\AdvRKAPRF}[2]{\Adv^{\mathrm{rka\dash prf}}_{#1}(#2)}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
