updated lecture schedule and added slides from Mar 18 lecture

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -981,6 +981,11 @@
 \newcommand{\kgma}{\kg_{\mathrm{ma}}}
 \newcommand{\kgc}{{\cal G}}
 
+
+\newcommand{\kgSym}{\mathsf{kg_s}}
+\newcommand{\encSym}{\mathsf{enc_s}}
+\newcommand{\decSym}{\mathsf{dec_s}}
+
 \newcommand{\msgsp}{\mathrm{MsgSp}}
 \newcommand{\PKscheme}{\Pi} %{{\cal AE}} %replaced it according to other notation
 \newcommand{\DSscheme}{{\cal DS}}
@@ -2200,6 +2205,10 @@
 
 \newcommand{\RKAPRF}{\textnormal{RKA-PRF}}
 \newcommand{\AdvRKAPRF}[2]{\Adv^{\mathrm{rka\dash prf}}_{#1}(#2)}
+
+
+\newcommand{\RSAk}{\textnormal{RSA}\dash k}
+\newcommand{\AdvOWFRSA}[2]{\Adv^{\mathrm{owf}}_{#1}(#2)}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
