--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -384,3 +384,13 @@ journal={20thNISSC Proceedings},
 year={1997},
 url={http://csrc.nist.gov/nissc/1997}
 }
+
+@inproceedings{RogawayShrimpton04,
+  author    = {Phillip Rogaway and
+               Thomas Shrimpton},
+  title     = {Cryptographic Hash-Function Basics: Definitions, Implications, and
+               Separations for Preimage Resistance, Second-Preimage Resistance, and
+               Collision Resistance},
+  booktitle = {Fast Software Encryption},
+  year      = {2004},
+}
