--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -229,6 +229,7 @@ doi = {10.1147/rd.383.0243}
 	pages={16--31},
 	year={2004},
 	organization={Springer}
+}
 
 @article{LubyRackoff88,
   author    = {Michael Luby and
@@ -408,3 +409,46 @@ url={http://csrc.nist.gov/nissc/1997}
   booktitle = {Fast Software Encryption},
   year      = {2004},
 }
+
+
+@InProceedings{Bellare1996,
+  title={Keying Hash Functions for Message Authentication},
+  author={Bellare, Mihir and Canetti, Ran and Krawczyk, Hugo},
+  booktitle={CRYPTO},
+  year={1996},
+  pages={1--15}
+}
+
+
+@InProceedings{Bellare2006,
+    title={New Proofs for NMAC and HMAC: Security Without Collision-Resistance},
+    author={Bellare, Mihir},
+    booktitle={CRYPTO},
+    year={2006},
+    pages={602--619}
+}
+
+@InProceedings{Coron2005,
+    author={Coron, Jean-S{\'e}bastien and Dodis, Yevgeniy and Malinaud, C{\'e}cile and Puniya, Prashant},
+    title={Merkle-Damg{\aa}rd Revisited: How to Construct a Hash Function},
+    booktitle={CRYPTO},
+    year={2005},
+    pages={430--448}
+}
+
+@InProceedings{Maurer2004,
+    author={Maurer, Ueli and Renner, Renato and Holenstein, Clemens},
+    title={Indifferentiability, Impossibility Results on Reductions, and Applications to the Random Oracle Methodology},
+    booktitle={Theory of Cryptography},
+    year={2004},
+    pages={21--39}
+}
+
+@InProceedings{Ristenpart2011,
+    title = {Careful with Composition: Limitations of Indifferentiability and Universal Composability.},
+    author = {Ristenpart, Thomas and Shacham, Hovav and Shrimpton, Thomas},
+    booktitle={EUROCRYPT},
+    year = {2011},
+    pages = {487--506}
+}
+
