added last weeks slides

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -2206,6 +2206,7 @@
 \newcommand{\RKAPRF}{\textnormal{RKA-PRF}}
 \newcommand{\AdvRKAPRF}[2]{\Adv^{\mathrm{rka\dash prf}}_{#1}(#2)}
 
+\newcommand{\DDH}{\textnormal{DDH}}
 
 \newcommand{\RSAk}{\textnormal{RSA}\dash k}
 \newcommand{\AdvOWFRSA}[2]{\Adv^{\mathrm{owf}}_{#1}(#2)}
