added DL assumptions

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -2132,6 +2132,12 @@
 \newcommand{\rorcpaideal}{\text{RoR-CPA-Ideal}}
 \newcommand{\integers}{\mathbb{Z}}
 
+\newcommand{\dlog}{\mathsf{Dlog}_{G,g}}
+\newcommand{\AdvDL}[2]{\Adv^{\mathrm{dl}}_{#1}(#2)}
+\newcommand{\DL}{\textnormal{DL}}
+\newcommand{\AdvCDH}[2]{\Adv^{\mathrm{cdh}}_{#1}(#2)}
+\newcommand{\CDH}{\textnormal{CDH}}
+
 \newcommand{\PRF}{\textnormal{PRF}}
 \newcommand{\AdvPRF}[2]{\Adv^{\mathrm{prf}}_{#1}(#2)}
 
