started hash function writeup

--- a/notes/hashfunctions2.tex
+++ b/notes/hashfunctions2.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Further Security Properties for Hash Functions}
-\label{sec:hashfunctions}
+\label{sec:hashfunctions2}
 
 \fpage{.25}{
 \underline{$\OWF^\advA_{H}$}\\[1pt]
