--- a/notes/notes.bib
+++ b/notes/notes.bib
@@ -382,6 +382,23 @@ publisher="Springer Berlin Heidelberg",
 isbn="978-3-540-45760-2"
 }
 
+@inproceedings{black2002black,
+    title={Black-box analysis of the block-cipher-based hash-function constructions from PGV},
+    author={Black, John and Rogaway, Phillip and Shrimpton, Thomas},
+    booktitle={Annual International Cryptology Conference},
+    pages={320--335},
+    year={2002}
+}
+
+@inproceedings{winternitz1984secure,
+    title={A secure one-way hash function built from DES},
+    author={Winternitz, Robert S},
+    booktitle={1984 IEEE Symposium on Security and Privacy},
+    pages={88--88},
+    year={1984},
+    organization={IEEE}
+}
+
 @Techreport{ commerce1981FPE,
 	title = "Guidelines for Implementing and Usgin the NBS Data Encryption Standard",
 	author = "US Department of Commerce",
