finished first draft of pke2 notes

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -60,6 +60,7 @@
 \newtheorem{clm}[thm]{Claim}
 \newtheorem{rem}[thm]{Remark}
 \newtheorem{exa}{Example}
+\newtheorem{fact}{Fact}
 
 \newenvironment{theorem}{\begin{thm}
     \begin{sl}
