--- a/notes/pke2.tex
+++ b/notes/pke2.tex
@@ -3,11 +3,11 @@
 \section{Key Exchange and Public Key Tools}
 \label{sec:pke2}
 
-\scribenote{add motivation for key exchange}
+In the symmetric key setting, we assume that two parties exchanging messages have access to a shared secret key. However, how do these parties share such a secret securely? Let us assume a \textit{passive adversary}, meaning that the adversary can listen in on network traffic but cannot alter or inject packets (we note that this assumption is not sufficient for real-world applications). In this section, we will present a key exchange protocol, called Diffie-Hellman anonymous key exchange. We will then go over some important assumptions in public key cryptography that allow us to prove such a protocol secure. Finally, we will end by going over another asymmetric encryption scheme called ElGamal encryption. 
 
 \subsection{Diffie-Hellman Key Exchange}
 
-In this section, we will go over one method to construct a secure key exchange protocol. The Diffie-Hellman key exchange protocol was created by Whitfield Diffie and Martin Hellman. This protocol requires some algebra and number theory that we will first go over. \scribenote{talk about how this is specifically an anonymous key exchange protocol}
+In this section, we will go over one method to construct a secure key exchange protocol. The Diffie-Hellman key exchange protocol was created by Whitfield Diffie and Martin Hellman. This protocol does not confirm to either party sharing the secret of the identity of the other, therefore making this an \textit{anonymous} protocol. Before we describe the protocol, we will first go over some prerequisite algebra and number theory.
 
 Let $p$ be a large prime number. We fix the group $\group = \Z_p^*=\{1,2,3,\ldots,p-1\}$, with group operation multiplication mod $p$. Recall that $\Z_p^*$ is the set of nonzero elements of $\Z_p$. We then know that $\group$ is \textit{cyclic}. This means that one can provide a group member $g \in \group$, called the \textit{generator}, such that $\group = \{g^0, g^1, g^2, \ldots, g^{p-1}\}$. 
 
@@ -94,7 +94,7 @@ However, a group that only meets the discrete logarithm assumption on its own is
 		\hline
 		Computational Diffie-Hellman (CDH) & $g,g^x,g^y$ & $g^{xy}$ \\
 		\hline
-		Decisional Diffie-Hellman (DDH) & $g, g^x, g^y, g^z$ & Is $z \equiv xy\ (\textrm{mod}\ |\group|)$? \\
+		Decisional Diffie-Hellman (DDH) & $g, g^x, g^y, g^z$ & Is $z \equiv xy\ (\bmod \ |\group|)$? \\
 		\hline
 	\end{tabular}
 	\caption{A summary of the discrete logarithm related problems over a cyclic group $\group$ with generator $g$ from this section. For each row, we state the problem, the values given to the adversary, and what the adversary must provide to solve the problem.}
@@ -307,16 +307,98 @@ The ElGamal scheme can be proven IND-CPA secure if DDH holds in $\group$, which 
 	\end{align*}
 \end{proof}
 
-\paragraph{ElGamal in the group $Z_p^*$.} 
+\paragraph{ElGamal in the group $Z_p^*$.} \thref{proof:elgamal} tells us that we must be careful to use a group for which DDH holds when utilizing ElGamal encryption. Indeed, DDH is easy in some well-known groups. In particular, the group $\Z_p^*$ for prime $p$ is one such example. ElGamal is thus not IND-CPA secure when it uses $\Z_p^*$. Before we show how DDH is easy for group $\Z_p^*$, we will go over some relevant topics in number theory that are exploited in the attack. 
 
-To see the proof of this, we point the interested reader to read about Euler's criterion. 
+An integer $n$ is called a \textit{quadratic residue} modulo $p$ if there is some integer $x$ such that $n \equiv x^2 \ (\bmod \ p)$. Now let $p$ be a prime, $g$ be a generator for $\Z_p^*$, and $a\in\Z_p^*$. 
 
+The \textit{Legendre symbol} is defined as follows:
+\bnm
+J_p(a) = \left\{ \begin{array}{rl} 
+	1 & \textnormal{if $a$ is a quadratic residue mod $p$}\\
+	0 & \textnormal{if $a \bmod p = 0$}\\
+	-1 & \textnormal{otherwise}
+\end{array}\right.
+\enm 
+When $J_p(a)=1$, this means $a=g^x$ and $x$ is even. When $J_p(a)=-1$, this means $a=g^x$ and $x$ is instead odd. The case where $J_p(a)=0$ is impossible since $\gcd(a,p)=1$. Furthermore, $J_p(a)$ is easy to compute since
+\bnm
+	J_p(a) = a^{\frac{p-1}{2}} \bmod p.
+\enm
+To see the proof of this, we point the interested reader to Euler's criterion. Now consider the following facts: 
+\begin{fact}
+	$J_p(g^{xy}) = 1 \textrm{ iff } J_p(g^x)=1 \textrm{ or } J_p(g^y)=1$
+\end{fact}
+\begin{fact}
+	The number of quadratic residues modulo $p$ in $\Z_p^*$ is $\frac{p-1}{2}$
+\end{fact}
+
+\begin{wrapfigure}{r}{2.5in}
+	\center
+	\begin{tabular}{|c||c|c|}
+		\hline
+		& $J_p(g^y)=1$ & $J_p(g^y)=-1$ \\
+		\hline \hline
+		$J_p(g^x)=1$ & $J_p(g^{xy})=1$ & $J_p(g^{xy})=1$ \\
+		\hline
+		$J_p(g^x)=-1$ & $J_p(g^{xy})=1$ & $J_p(g^{xy})=-1$ \\
+		\hline
+	\end{tabular}
+	\caption{The values of $J_p(g^{xy})$ for various values of $J_p(g^x)$ and $J_p(g^y)$.}
+	\label{fig:legendre-table}
+\end{wrapfigure}
+
+Note that the first fact is true because $g^{xy}$ is a quadratic residue modulo $p$ if $xy$ is even, which occurs when either $x$ or $y$ is even. It tells us that $\Prob{J_p(g^{xy})=1}=0.75$, as shown in \figref{fig:legendre-table}. The second fact tells us that exactly half the elements of $\Z_p^*$ are quadratic residues. This means that for any $a \in Z_p^*$, $\Prob{J_p(a)}=0.5$. These facts then allow us to find a way to solve the DDH problem in $\Z_p^*$ with non-negligible probability. In particular, the adversary must distinguish between being given $g^z$ for $z \getsr \Z_{p-1}$ and $g^{xy}$ for $x,y \getsr \Z_{p-1}$. Notice that $\Prob{J_p(g^{xy})=1}=0.75$ while $\Prob{J_p(g^{z})=1}=0.5$. Thus, we can construct an adversary $\advB$ that simply computes the Legendre symbol for $Z$, which is easy to compute. $\advB$ is shown below.
+\begin{center}
+	\fpage{.20}{
+		\underline{Adversary $\advB(X,Y,Z)$}\\
+		If $J_p(Z) = 1$ then \\
+		\myInd Return 1 \\
+		Return 0
+	}
+\end{center}
+The DDH-advantage of $\advB$ is
+\begin{align*}
+	\AdvDDH{\Z_p^*,g}{\advB} &= 2 \cdot \Prob{\DDH_{\Z_p^*, g}^\advB\Rightarrow\true} - 1 \\
+	&=
+	\begin{aligned}
+		2 \cdot (&\Prob{\DDH_{\group, g}^\advB\Rightarrow\true \ | \ b=1}\cdot\Prob{b=1} + \\
+		&\Prob{\DDH_{\group, g}^\advB\Rightarrow\true \ | \ b=0}\cdot\Prob{b=0}) - 1
+	\end{aligned} \\
+	&= 2 \cdot (0.75 \cdot \frac{1}{2} + 0.5 \cdot \frac{1}{2}) - 1 \\
+	&= 0.25.
+\end{align*}
+
+While a DDH-advantage of 0.25 is quite high, we can construct an adversary $\advB'$ that gains an even greater advantage with only a slightly longer running time. $\advB'$ checks that the Legendre symbols of $X$, $Y$, and $Z$ all match according to the table in \figref{fig:legendre-table}.
+
+\begin{center}
+	\fpage{.25}{
+		\underline{Adversary $\advB'(X,Y,Z)$}\\
+		If $J_p(X) = 1$ or $J_p(Y) = 1$ then\\
+		\myInd $s \gets 1$\\
+		Else \\
+		\myInd $s \gets -1$\\
+		If $J_p(Z) = s$ then\\
+		\myInd Return 1 \\
+		Return 0
+	}
+\end{center}
+
+Notice that if $J_p(X) = 1$ or $J_p(Y) = 1$, then $J_p(g^{xy})=1$ always. Otherwise, $J_p(g^{xy})=-1$. In the case that $Z=g^z$ for $z \getsr \Z_{p-1}$, there is probability 0.5 that they match. The DDH-advantage of $\advB'$ is then
+\begin{align*}
+	\AdvDDH{\Z_p^*,g}{\advB} &= 2 \cdot \Prob{\DDH_{\Z_p^*, g}^\advB\Rightarrow\true} - 1 \\
+	&=
+	\begin{aligned}
+		2 \cdot (&\Prob{\DDH_{\group, g}^\advB\Rightarrow\true \ | \ b=1}\cdot\Prob{b=1} + \\
+		&\Prob{\DDH_{\group, g}^\advB\Rightarrow\true \ | \ b=0}\cdot\Prob{b=0}) - 1
+	\end{aligned} \\
+	&= 2 \cdot (1 \cdot \frac{1}{2} + 0.5 \cdot \frac{1}{2}) - 1 \\
+	&= 0.5.
+\end{align*}
+
+Now that we have shown $Z_p^*$ is not a DDH-hard group, are DL and CDH also not hard in $Z_p^*$? The current best known attack solving DL in $Z_p^*$ is via a generalized number field sieve which runs in time $\bigO(e^{ (C+o(1))\cdot \ln(p)^{1/3} \cdot (\ln\ln(p))^{2/3 }} )$. If the prime factorization of $p-1$ is known, we can solve DL in the subgroups. Since we need to find generators of the group, the factorization is usually known. This means we need subgroups to be large. It is recommended to pick $p=2q+1$ for a large prime $q$. These are referred to as ``safe primes''. We can also use the subgroup of quadratic residues that has order $q$ in this case. Having the order of the group be prime comes with certain advantages, such as exponents having inverses. Furthermore, DDH is conjectured to be hard in this group. 
 
 \section*{Exercises}
 
 \begin{enumerate}[label=\textbf{Exercise \thesection.\arabic*}, wide=0pt]
-	\item show that DHKE is secure given CDH assumption?
-	
 	\item Let $\group$ be a cyclic group and let $g$ be a generator of $\group$. Let $\advA$ be an adversary against the DL problem. Show that there exists an adversary $\advB$ such that 
 	\begin{equation*}
 		\AdvDL{\group,g}{\advA} \leq \AdvCDH{\group,g}{\advB}
@@ -328,4 +410,12 @@ To see the proof of this, we point the interested reader to read about Euler's c
 	\AdvCDH{\group,g}{\advB} \leq \AdvDDH{\group,g}{\advC} + \frac{1}{|\group|}
 	\end{equation*}
 	where the running time of $\advC$ is that of $\advB$.
+	
+	\item (from \cite{BonehShoupBook}, Problem 11.1) Let $\group$ be a cyclic group of prime order $q$ generated by $g\in \group$. Let $\hash:\msgspace \to \group$ be a hash function, which we shall model as a random oracle. Let $\prf$ be the PRF defined over $(\Z_q,\msgspace,\group)$ as follows:
+	\begin{equation*}
+		\prf(K,M) = \hash(M)^K \textnormal{ for } K \in \Z_q, M \in \msgspace.
+	\end{equation*}
+	Show that $\prf$ is a secure PRF in the random oracle model for $\hash$ under the DDH assumption for $\group$. In particular, you should show that for every adversary $\advA$ attacking $\prf$ as a PRF, there exists a DDH adversary $\advB$ such that $\AdvPRF{\prf}{\advA}\leq \AdvDDH{(\group,g)}{\advB} + \frac{1}{q}$. 
+	
+	
 \end{enumerate}
