some changes to defs

--- a/notes/defs.tex
+++ b/notes/defs.tex
@@ -2154,6 +2154,8 @@
 \newcommand{\RORCCA}{\textnormal{ROR-CCA}}
 \newcommand{\AdvRORCCA}[2]{\Adv^{\mathrm{ror\dash cca}}_{#1}(#2)}
 
+\newcommand{\LORCCA}{\textnormal{LOR-CCA}}
+
 % \newcommand{\INDSIM}{\textnormal{INDSIM}}
 \newcommand{\AdvINDSIM}[2]{\Adv^{\mathrm{ind\dash sim}}_{#1}(#2)}
 
@@ -2220,6 +2222,8 @@
 
 \newcommand{\DDH}{\textnormal{DDH}}
 
+\newcommand{\ICDH}{\textnormal{ICDH}}
+\newcommand{\DDHoracle}{\textnormal{DHCheck}}
 
 \newcommand{\RSAk}{\textnormal{RSA}\dash k}
 \newcommand{\AdvOWFRSA}[2]{\Adv^{\mathrm{owf}}_{#1}(#2)}
