caught up adding slides form last couple of lectures

--- a/notes/digsigs.tex
+++ b/notes/digsigs.tex
@@ -74,6 +74,7 @@ adversary $\advB$ to be:
 \underline{$\UFCMA_{\DS}$}\\
 $((N,e),(N,d)) \getsr \kg$\\
 $(M^*,\sigma^*) \getsr \advA^{\Horacle,\SignOracle}((N,e))$\\
+If $M^* \in \calM$ then Ret $\false$\\
 Ret $\left(\TabH[M^*] = (\sigma^*)^e \bmod N\right)$\medskip
 
 \underline{$\Horacle(M)$}\\
